# Flask-Form

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
Form/: __init__.py
Form/Modules/: admin.py  auth.py  db.py  forms.py  user.py  users.py  utils.py  views.py
Form/templates/: about.html  create_form.html  edit_form.html  edit_response.html  edit_user.html  fill_form.html  form_submitted.html  index.html  list_forms.html  profile.html  profile_edit.html  responses.html  signin.html  signup.html  users.html
instance/: site.db
